# libcyclotomic

./: CMakeLists.txt  README.md
include/: cyclotom.h  cyclotomic.h
lib/: cyclotom.cpp  cyclotomic.cpp
lib/gap/: c_oper1.c  compstat_empty.c  config.h  config.h.in  cyclotom.c  cyclotom.h  ffdata.c  ffdata.h  version.c  version.h
lib/gap/hpc/: thread.h
test/: cyclotom.t.cpp  cyclotomic.t.cpp
